[package]
name = "hello-quic"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bytes = "1.10.1"
futures = "0.3.31"
libp2p-core = { version = "0.43.1", features = [] }
libp2p-identity = { version = "0.2.12", features = ["ed25519", "rand" ] } 
libp2p-tls = "0.6.2"
postcard = { version = "1.1.3", default-features = false, features = ["alloc", "use-std"] }
s2n-quic = { version = "1.62.0", default-features = false, features = ["provider-tls-rustls", "provider-address-token-default"] } 
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.0", features = ["full"] }
unsigned-varint = { version = "0.8.0", features = ["futures"] }
